tests/baselines/reference/nestedDestructuringOfRequire.errors.txt
tests/cases/conformance/salsa/main.js(5,1): error TS2304: Cannot find name 'chalk'.


==== tests/cases/conformance/salsa/main.js (1 errors) ====
    const {
        chalk: { grey }
    } = require('./mod1');
    grey
    chalk
    ~~~~~
!!! error TS2304: Cannot find name 'chalk'.
    
==== tests/cases/conformance/salsa/mod1.js (0 errors) ====
    const chalk = {
        grey: {}
    };
    module.exports.chalk = chalk
    